<resources>
    <string name="app_name">NumberPuzzle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcomeToSettings">SETTINGS</string>
    <string name="welcomeToConfig">START GAME</string>
    <string name="WelcomeMessage">WELCOME TO THE NUMBER PUZZLE</string>
    <string name="SettingsToWelcome">BACK</string>
    <string name="configToGame">PLAY!</string>
    <string name="gameToResult">END GAME</string>
    <string name="new_game">NEW GAME!</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="blue_tile">BLUE TILE</string>
    <string name="red_tile">RED TILE</string>
    <string name="beige_text">BEIGE TEXT</string>
    <string name="black_text">BLACK TEXT</string>
    <string name="text_color">Text Color:</string>
    <string name="tile_color">Tile Color:</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="press_the_button_to_play_again">PRESS THE BUTTON TO PLAY AGAIN!</string>
    <string name="WINNER">YOU WON!</string>
    <string name="SURRENDER">YOU SURRENDER</string>
    <string name="game_mode_easy">Game Mode: Easy!</string>
    <string name="game_mode_medium">Game Mode: Medium!</string>
    <string name="game_mode_hard">Game Mode: Hard!</string>
</resources>