<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/WelcomeBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.SettingsFragment">


    <Button
        android:id="@+id/SettingsToWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="124dp"
        android:text="@string/SettingsToWelcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TileSetting"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/tile_color"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/top_guideline" />

    <RadioGroup
        android:id="@+id/TileSettingGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/top_guideline">
        <RadioButton
            android:id="@+id/BlueTile"
            android:background="@color/Blue_button"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:text="@string/blue_tile">
        </RadioButton>
        <RadioButton
            android:id="@+id/RedTile"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:background="@color/red_button"
            android:text="@string/red_tile"
            android:textColor="#CFD8DC">
        </RadioButton>
    </RadioGroup>

    <TextView
        android:id="@+id/TextSetting"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:text="@string/text_color"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/bottom1_guideline" />

    <RadioGroup
        android:id="@+id/TextSettingGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bottom1_guideline"
        app:layout_constraintStart_toStartOf="@id/right_guideline">
        <RadioButton
            android:id="@+id/BlackText"
            android:background="@color/stroke1"
            android:textColor="@color/white"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:text="@string/black_text">
        </RadioButton>
        <RadioButton
            android:id="@+id/BeigeText"
            android:background="@color/stroke2"
            android:textColor="@color/black"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:text="@string/beige_text">
        </RadioButton>
    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.61" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom1_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom2_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>